Fixed some critical errors